--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,9 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content padding id="page1">
+  <form id="home-form3">
+    <ion-searchbar placeholder="Search " name="" id="home-search2" inputmode="text" ></ion-searchbar>
+  </form>
+  <div class="spacer" style="height:100px;" id="home-spacer6"></div>
+  <button id="home-button1" ion-button color="positive" block on-click="goToPage2()">
+    Tap me!
+  </button>
 </ion-content>
