--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -9,7 +9,7 @@
   <h3 id="lastKnownWell-heading5" style="color:#000000;font-weight:400;">
     What time patient was last known well?
   </h3>
-  <form id="lastKnownWell-form8" [formGroup]="timeForm"><!--The last known well in hour format-->
+  <form [formGroup]="timeForm" (ngSubmit)="SubmitTime()"><!--The last known well in hour format-->
     <ion-item id="lastKnownWellTime">
       <ion-label>Last Known Well Hour Format</ion-label>
       <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm" required formControlName="time1"></ion-datetime>
@@ -24,11 +24,11 @@
     </ion-item>
     <ion-item id="LastKnownWellMins">
       <ion-label>Minutes</ion-label>
-      <ion-input inputmode="numeric" required min="0" max="60" formControlName=></ion-input>    
+      <ion-input inputmode="numeric" required min="0" max="60" formControlName="Mins"></ion-input>    
     </ion-item>
   </form>
   <div class="spacer" style="height:100px;" id="lastKnownWell-spacer7"></div>
-  <button id="lastKnownWell-button2" ion-button color="positive" block on-click="goToImagingRequired()">
+  <button id="lastKnownWell-button2" ion-button color="positive" block on-click="SubmitTime()">
     Next
   </button>
   <div class="spacer" style="height:100px;" id="lastKnownWell-spacer8"></div>
