Added the component class and included it in most pages

--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -6,6 +6,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page2">
+    <components-timer></components-timer>
   <h3 id="lastKnownWell-heading5" style="color:#000000;font-weight:400;">
     What time patient was last known well?
   </h3>
