--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -6,6 +6,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page1">
+    <components-timer></components-timer>
   <form id="patientLocation-form3">
     <ion-searchbar placeholder="Enter Location" name="" id="patientLocation-search2"></ion-searchbar>
   </form>
