--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -6,6 +6,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page4">
+    <components-timer></components-timer>
   <h4 id="treatment-heading6" style="color:#000000;">
     Imaging/tPA/EVT
   </h4>
