--- a/src/pages/advanced-imaging/advanced-imaging.html
+++ b/src/pages/advanced-imaging/advanced-imaging.html
@@ -6,6 +6,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page6">
+    <components-timer></components-timer>
   <h3 id="advancedImaging-heading4" style="color:#000000;font-weight:400;">
     Do you require advanced imaging? (CTP/MRI)
   </h3>
