--- a/src/pages/imaging-required/imaging-required.html
+++ b/src/pages/imaging-required/imaging-required.html
@@ -6,6 +6,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page3">
+    <components-timer></components-timer>
   <h3 id="imagingRequired-heading3" style="color:#000000;font-weight:400;">
     Does the patient require imaging?
   </h3>
