--- a/src/pages/telestroke-site/telestroke-site.html
+++ b/src/pages/telestroke-site/telestroke-site.html
@@ -6,6 +6,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page5">
+    <components-timer></components-timer>
   <h3 id="telestrokeSite-heading2" style="color:#000000;font-weight:400;">
     Are you at a telestroke site?
   </h3>
