--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -7,7 +7,7 @@
 </ion-header>
 <ion-content padding id="page1">
   <form id="patientLocation-form3">
-    <ion-searchbar placeholder="Enter Location" name="" id="patientLocation-search2"></ion-searchbar>
+        <ion-input placeholder="Enter Address" id="txtHome" type="text"></ion-input>
   </form>
   <div class="spacer" style="height:100px;" id="patientLocation-spacer6"></div>
   <button id="patientLocation-button1" ion-button color="positive" block on-click="goToLastKnownWell()">
