says "hello world" at top of page

--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -31,7 +31,11 @@
   </style>
   <ion-header><!-- sets the header for the page with -->
     
-      <ion-title>Geo Mapping for Stroke Patients</ion-title><!-- the title of the page -->
+      <ion-navbar>
+        <ion-title>
+          Geo Mapping for Stroke Patients<!-- the title of the page -->
+        </ion-title>
+      </ion-navbar>
    
   </ion-header>
   <ion-content>
