--- a/src/pages/imaging-required/imaging-required.html
+++ b/src/pages/imaging-required/imaging-required.html
@@ -16,4 +16,11 @@
   <button id="imagingRequired-button4" ion-button color="positive" block on-click="goToTelestrokeSite()">
     No
   </button>
+  <p id="demo"></p>
+
+  <div class="wrapper">
+    <div class="pie spinner"></div>
+    <div class="pie filler"></div>
+    <div class="mask"></div>
+  </div>
 </ion-content>
