Got the timer going first page need to move all over to the provider

--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -39,6 +39,7 @@
    
   </ion-header>
   <ion-content>
+    <components-timer></components-timer>
   <!-- A section of the page with the id map set to take up 50% of the height automaticaly taking all of the width and calling the onMapClick function passing the $event which is the lat and lng of where was clicked -->
     
   
