--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -12,20 +12,8 @@
   </h3>
   <form [formGroup]="timeForm" (ngSubmit)="SubmitTime()"><!--The last known well in hour format-->
     <ion-item id="lastKnownWellTime">
-      <ion-label>Last Known Well Hour Format</ion-label>
+      <ion-label></ion-label>
       <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm" required formControlName="time1"></ion-datetime>
-    </ion-item>
-    <ion-item id="LastKnownWellTime"><!--The last known well in numeric with hours and minutes seperate -->
-      <ion-label>Time of Last Known Well</ion-label>
-      <ion-input type="time" required formControlName="timeHTML"></ion-input>    
-    </ion-item>
-    <ion-item id="LastKnownWellMins">
-      <ion-label>Hours</ion-label>
-      <ion-input inputmode="numeric" required min="0" formControlName="Hours"></ion-input>    
-    </ion-item>
-    <ion-item id="LastKnownWellMins">
-      <ion-label>Minutes</ion-label>
-      <ion-input inputmode="numeric" required min="0" max="60" formControlName="Mins"></ion-input>    
     </ion-item>
   </form>
   <div class="spacer" style="height:100px;" id="lastKnownWell-spacer7"></div>
