everything is up to date

--- a/src/pages/imaging-required/imaging-required.html
+++ b/src/pages/imaging-required/imaging-required.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="steelblue2">
     <ion-title>
       Imaging Required
     </ion-title>
@@ -11,10 +11,10 @@
     Does the patient require imaging?
   </h3>
   <div class="spacer" style="height:100px;" id="imagingRequired-spacer4"></div>
-  <button id="imagingRequired-button3" ion-button color="positive" block on-click="goToTreatment()">
+  <button id="imagingRequired-button3" ion-button color="steelblue1" block on-click="goToTreatment()">
     Yes (CT/CTA)
   </button>
-  <button id="imagingRequired-button4" ion-button color="positive" block on-click="goToTelestrokeSite()">
+  <button id="imagingRequired-button4" ion-button color="steelblue1" block on-click="goToTelestrokeSite()">
     No
   </button>
 </ion-content>
