--- a/src/pages/advanced-imaging/advanced-imaging.html
+++ b/src/pages/advanced-imaging/advanced-imaging.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="steelblue2">
     <ion-title>
       Advanced Imaging
     </ion-title>
@@ -11,10 +11,10 @@
     Do you require advanced imaging? (CTP/MRI)
   </h3>
   <div class="spacer" style="height:100px;" id="advancedImaging-spacer9"></div>
-  <button id="advancedImaging-button7" ion-button color="positive" block on-click="goToTreatment()">
+  <button id="advancedImaging-button7" ion-button color="steelblue1" block on-click="goToTreatment()">
     Yes
   </button>
-  <button id="advancedImaging-button8" ion-button color="positive" block on-click="goToTreatment()">
+  <button id="advancedImaging-button8" ion-button color="steelblue1" block on-click="goToTreatment()">
     No
   </button>
 </ion-content>
