--- a/src/pages/telestroke-site/telestroke-site.html
+++ b/src/pages/telestroke-site/telestroke-site.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="steelblue2">
     <ion-title>
       Telestroke Site
     </ion-title>
@@ -11,10 +11,10 @@
     Are you at a telestroke site?
   </h3>
   <div class="spacer" style="height:100px;" id="telestrokeSite-spacer5"></div>
-  <button id="telestrokeSite-button5" ion-button color="positive" block on-click="goToAdvancedImaging()">
+  <button id="telestrokeSite-button5" ion-button color="steelblue1"  block on-click="goToAdvancedImaging()">
     Yes
   </button>
-  <button id="telestrokeSite-button6" ion-button color="positive" block on-click="goToTreatment()">
+  <button id="telestrokeSite-button6" ion-button color="steelblue1" block on-click="goToTreatment()">
     No
   </button>
 </ion-content>
