--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="steelblue2">
     <ion-title>
       Treatment
     </ion-title>
@@ -53,7 +53,7 @@
       <ion-textarea placeholder=""></ion-textarea>
     </ion-item>
     <div class="spacer" style="width:300px;height:21px;" id="treatment-spacer12"></div>
-    <button id="treatment-button9" ion-button color="positive" block on-click="goToMap()">
+    <button id="treatment-button9" ion-button color="steelblue1" block on-click="goToMap()">
       Next
     </button>
   </form>
