--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -16,11 +16,11 @@
 <ion-content padding id="page1">
 
 
-  <input type="text" [(ngModel)]="searchterm" (keydown)="search($event)" placeholder="search locations..." class="input">
+  <ion-input type="text" [(ngModel)]="searchterm" (keydown)="search($event)" class="input" placeholder="Enter Address" id="txtHome" required></ion-input>
   <div *ngFor="let health_centres of Medical_Centers">
 
-    <button block on-click="getLatLng(health_centres.name)">
-      {{health_centres.address}}
+    <button type ="button" id="patientLocation-button1"  ion-button color="steelblue1"  fill="outline" block on-click="goToLastKnownWell()" block on-click="getLatLng(health_centres.name)">
+      <!--{{health_centres.address}}-->
       <p>
         {{health_centres.name}}
       </p>
@@ -33,13 +33,7 @@
     </p>
   </div>
 
-
-  <form id="patientLocation-form3" >
-        <ion-input  placeholder="Enter Address" id="txtHome" type="text" required></ion-input>
-  </form>
   <div class="spacer" style="height:100px;" id="patientLocation-spacer6"></div>
-  <button [disabled]="buttonDisabled" type ="button" id="patientLocation-button1"  ion-button color="steelblue1"  fill="outline" block on-click="goToLastKnownWell()">
-    Next
-  </button>
+
 </ion-content>
 
