--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -39,6 +39,7 @@
    
   </ion-header>
   <ion-content>
+    <components-timer></components-timer>
   <!-- A section of the page with the id map set to take up 50% of the height automaticaly taking all of the width and calling the onMapClick function passing the $event which is the lat and lng of where was clicked -->
     
   
@@ -79,21 +80,21 @@
   
     </div>
   
-    <div id="Legend"><!-- the part of the page containing the labels for the legend with the images of the icons -->
-      <ion-grid  >
-        <!-- an ion grid which organizes the icons into a grid like pattern with no pading -->
+    <!--<div id="Legend">
+      <ion-grid  ><!- - the part of the page containing the labels for the legend with the images of the icons - ->
+        <!- - an ion grid which organizes the icons into a grid like pattern with no pading - ->
         <ion-row  class="ion-justify-content-start">
-          <!-- a row if the grid with the items justified to the start rows will contain columns -->
+          <!- - a row if the grid with the items justified to the start rows will contain columns - ->
   
           <ion-col col-3 g>
-            <!-- a column in the row col-3 means it will take 1/4 as an ion-row is seperated into 12 columns this will be the same for all following columns -->
+            <!- - a column in the row col-3 means it will take 1/4 as an ion-row is seperated into 12 columns this will be the same for all following columns - ->
             <ion-item>
-              <!-- an item made up of a thumbnail with an image with a specified height and width with the source being an image on the internet and the label being displayed next to it this will be the same for all items in the grid  -->
+              <!- - an item made up of a thumbnail with an image with a specified height and width with the source being an image on the internet and the label being displayed next to it this will be the same for all items in the grid  - ->
               <ion-thumbnail no-margin item-left>
                 <img src="./assets/imgs/TBRHSC.png" height='30' width="30">
                   </ion-thumbnail>
                 <ion-label >Regional Stroke Center</ion-label>
-            </ion-item><!-- end of the item  -->
+            </ion-item><!- - end of the item  - ->
           </ion-col>
           <ion-col col-3 >
             <ion-item>
@@ -119,8 +120,8 @@
             <ion-label >Helepad</ion-label>
         </ion-item>
           </ion-col>
-        </ion-row><!-- and of the row to keep it to 4 columns in each row -->
-        <ion-row no-padding><!-- start of a new row of 4 columns -->
+        </ion-row><!- - and of the row to keep it to 4 columns in each row - ->
+        <ion-row no-padding><!- - start of a new row of 4 columns - ->
           <ion-col col-3 no-padding>
           <ion-item>
             <ion-thumbnail no-margin item-left>
@@ -154,8 +155,8 @@
         </ion-item>
         </ion-col>
         </ion-row>
-      </ion-grid><!-- end of the grid display -->
-    </div><!-- end of the div for icons -->
+      </ion-grid><!- - end of the grid display - ->
+    </div>--><!-- end of the div for icons -->
           <h3 no-padding> Routes to Imaging Capable Hospital</h3><!-- a header displaying before the div with routes to hospital -->
           <div><!-- start of the routes to div -->
              
