added to location looking to start new branch

--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -14,6 +14,7 @@
 
 </ion-header>
 <ion-content padding id="page1">
+  <components-timer></components-timer>
   <button type ="button" id="patientLocation-button1"  ion-button color="steelblue1"  fill="outline" block on-click="goToLastKnownWell()" block on-click="setCurrentPosition()"> 
   CHOOSE YOUR LOCATION
   </button>
