--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -18,13 +18,13 @@
   CHOOSE YOUR LOCATION
   </button>
 <p style="text-align: center;">OR</p>
-  <ion-input type="text" [(ngModel)]="searchterm" (keyup)="search($event)" class="input" placeholder="Enter City" id="txtHome" required style = "border: solid black 3px;"></ion-input>
+  <ion-input type="text" [(ngModel)]="searchterm" (keyup)="search($event)" autocapitalize="on" class="input" placeholder="Enter City" id="txtHome" required style = "border: solid black 3px;"></ion-input>
   <div *ngFor="let health_centres of Medical_Centers">
 
     <button type ="button" id="patientLocation-button1"  ion-button color="steelblue1"  fill="outline" block on-click="goToLastKnownWell()" block on-click="getLatLng(health_centres.name)">
       <!--{{health_centres.address}}-->
       <p>
-        {{health_centres.name}}
+        {{health_centres.name}}, {{health_centres.city}}
       </p>
     </button>
   </div>
