Changed the page layout and did some basic testing commented out the contact part from last known well

--- a/src/pages/evt-options/evt-options.html
+++ b/src/pages/evt-options/evt-options.html
@@ -1,14 +1,14 @@
 <ion-header>
   <ion-navbar color="steelblue2">
     <ion-title>
-      Imaging Routes
+      EVT Routes
     </ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page4">
     <components-timer></components-timer>
   <h4 id="treatment-heading6" style="color:#000000;">
-    Imaging
+    EVT
   </h4>
   <form id="treatment-form9">
     <ion-item id="treatment-textarea2">
@@ -34,6 +34,4 @@
     <button id="treatment-button9" ion-button color="steelblue1" block on-click="goToMap()">
       Next
     </button>
-    <p style="text-align: center;">OR</p>
-    <button id="moreTreatments" ion-button color="steelblue1" block on-click="GoToMore()">View Treatment Options</button>
 </ion-content>
