--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -23,8 +23,8 @@
   
   <div class="spacer" style="height:100px;" id="lastKnownWell-spacer8"></div>
   <div id="lastKnownWell-markdown2" style="text-align:center;" class="show-list-numbers-and-dots">
-    <p style="color:#000000;font-size:12px;">
+   <!-- <p style="color:#000000;font-size:12px;">
       Contact the Acute Stroke Physician or RCCR or Critical Care (this will be based on the patient location and the process in place to support the location - see access to Acute Stroke Services MAP)
-    </p>
+    </p>-->
   </div>
 </ion-content>
