--- a/src/pages/t-pa-question/t-pa-question.html
+++ b/src/pages/t-pa-question/t-pa-question.html
@@ -1,20 +1,20 @@
 <ion-header>
   <ion-navbar color="steelblue2">
     <ion-title>
-      Imaging Required
+      tPA Performed?
     </ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page3">
     <components-timer></components-timer>
   <h3 id="imagingRequired-heading3" style="color:#000000;font-weight:400;">
-    Does the patient require imaging?
+    Has your patient had tPA?
   </h3>
   <div class="spacer" style="height:100px;" id="imagingRequired-spacer4"></div>
-  <button id="imagingRequired-button3" ion-button color="steelblue1" block on-click="goToImagingRoutes()">
+  <button id="imagingRequired-button3" ion-button color="steelblue1" block on-click="goToEVTOptions()">
     Yes 
   </button>
-  <button id="imagingRequired-button4" ion-button color="steelblue1" block on-click="goToMap()">
+  <button id="imagingRequired-button4" ion-button color="steelblue1" block on-click="goToImagingRoutes()">
     No
   </button>
 </ion-content>
