Fixed the weird border changes

--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -22,7 +22,7 @@
   <ion-input type="text" [(ngModel)]="searchterm" (keyup)="search($event)" autocapitalize="on" class="input" placeholder="Enter City" id="txtHome" required style = "border: solid black 3px;"></ion-input>
   <div *ngFor="let health_centres of Medical_Centers">
 <!--Tried the height to fix it probably does nothing and no screen size is that small-->
-    <button type ="button" height="fit-content" style="border: solid black 1px;" id="patientLocation-button1" text-wrap no-margin ion-button color="steelblue1"  fill="outline"  block on-click="getLatLng(health_centres.name)" block on-click="goToLastKnownWell(health_centres.bTelestroke)" >
+    <button type ="button"   id="patientLocation-button1" text-wrap  ion-button color="steelblue1"  fill="outline"  block on-click="getLatLng(health_centres.name)" block on-click="goToLastKnownWell(health_centres.bTelestroke)" >
       <!--{{health_centres.address}}-->
       <p>
         {{health_centres.name}}:  {{health_centres.city}}
