New Page structure Implemented still need to make look nice

--- a/src/pages/t-pa-question/t-pa-question.html
+++ b/src/pages/t-pa-question/t-pa-question.html
@@ -14,7 +14,7 @@
   <button id="imagingRequired-button3" ion-button color="steelblue1" block on-click="goToEVTOptions()">
     Yes 
   </button>
-  <button id="imagingRequired-button4" ion-button color="steelblue1" block on-click="goToImagingRoutes()">
+  <button id="imagingRequired-button4" ion-button color="steelblue1" block on-click="goToTreatment()">
     No
   </button>
 </ion-content>
