--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -8,7 +8,7 @@
 <ion-content padding id="page4">
     <components-timer></components-timer>
   <h4 id="treatment-heading6" style="color:#000000;">
-    Imaging/tPA/EVT
+    tPA
   </h4>
   <form id="treatment-form9">
     <ion-item id="treatment-textarea2">
@@ -31,7 +31,7 @@
     </ion-item>
   </form>
   <h4 id="treatment-heading7" style="color:#000000;">
-    EVT only
+    EVT 
   </h4>
   <form id="treatment-form10">
     <ion-item id="treatment-textarea5">
