--- a/src/pages/imaging-required/imaging-required.html
+++ b/src/pages/imaging-required/imaging-required.html
@@ -14,7 +14,7 @@
   <button id="imagingRequired-button3" ion-button color="steelblue1" block on-click="goToImagingRoutes()">
     Yes 
   </button>
-  <button id="imagingRequired-button4" ion-button color="steelblue1" block on-click="goToMap()">
+  <button id="imagingRequired-button4" ion-button color="steelblue1" block on-click="goToTpaQuestion()">
     No
   </button>
 </ion-content>
