--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -6,6 +6,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page2">
+<div [ngStyle]="{ 'height' : Height}">
   <h3 id="lastKnownWell-heading5" style="color:#000000;font-weight:400;">
     What time patient was last known well?
   </h3>
@@ -19,12 +20,14 @@
       Next
     </button>
   </form>
-  <div class="spacer" style="height:100px;" id="lastKnownWell-spacer7"></div>
+  <!--<div class="spacer" style="height:100px;" id="lastKnownWell-spacer7"></div>
   
   <div class="spacer" style="height:100px;" id="lastKnownWell-spacer8"></div>
-  <div id="lastKnownWell-markdown2" style="text-align:center;" class="show-list-numbers-and-dots">
+  <div id="lastKnownWell-markdown2" style="text-align:center;" class="show-list-numbers-and-dots">-->
    <!-- <p style="color:#000000;font-size:12px;">
       Contact the Acute Stroke Physician or RCCR or Critical Care (this will be based on the patient location and the process in place to support the location - see access to Acute Stroke Services MAP)
     </p>-->
-  </div>
+  <!--</div>-->
+</div>
+
 </ion-content>
