Need to move rest of timers out for scrolling purposes and do spacing

--- a/src/pages/evt-options/evt-options.html
+++ b/src/pages/evt-options/evt-options.html
@@ -5,8 +5,9 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
+<components-timer style="position: fixed;"></components-timer>
 <ion-content padding id="page4">
-    <components-timer></components-timer>
+  
   <h4 id="treatment-heading6" style="color:#000000;">
     EVT
   </h4>
