fixed up the timer part

--- a/src/pages/evt-options/evt-options.html
+++ b/src/pages/evt-options/evt-options.html
@@ -4,8 +4,9 @@
       EVT Routes
     </ion-title>
   </ion-navbar>
+  <components-timer ></components-timer>
 </ion-header>
-<components-timer style="position: fixed;"></components-timer>
+
 <ion-content padding id="page4">
   
   <h4 id="treatment-heading6" style="color:#000000;">
