Made changes to pages need to adjust the height for the actual divs to size it out with no overlap and scroll

--- a/src/pages/evt-options/evt-options.html
+++ b/src/pages/evt-options/evt-options.html
@@ -9,7 +9,7 @@
 
 <ion-content padding id="page4">
   
-  <h4 id="treatment-heading6" style="color:#000000;">
+  <h4 id="treatment-heading6" style="color:#000000;font-size: x-large;">
     EVT
   </h4>
   <form id="treatment-form9">
