--- a/src/pages/imaging/imaging.html
+++ b/src/pages/imaging/imaging.html
@@ -8,8 +8,8 @@
 </ion-header>
 
 <ion-content padding id="page4">
-    
-  <h4 id="treatment-heading6" style="color:#000000;">
+  <div style="height:3vh;"></div>
+  <h4 id="treatment-heading6" style="color:#000000;font-size: x-large;">
     Imaging
   </h4>
   <form id="treatment-form9">
@@ -36,6 +36,6 @@
     <button id="treatment-button9" ion-button color="steelblue1" block on-click="goToMap()">
       Next
     </button>
-    <p style="text-align: center;">OR</p>
+    <p style="text-align: center;font-size: large;">OR</p>
     <button id="moreTreatments" ion-button color="steelblue1" block on-click="GoToMore()">View Treatment Options</button>
 </ion-content>
