--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -5,7 +5,7 @@
          <ion-icon name="menu"></ion-icon>
        </button>
       </ion-buttons>
-    <ion-title>
+    <ion-title style="font-size: x-large;">
       Patient Location
     </ion-title>
   </ion-navbar>
@@ -13,20 +13,22 @@
   <components-timer></components-timer>
 
 </ion-header>
-<ion-content  padding id="page1">
-  
-  <div style="height:5%;"></div>
-  <button type ="button" id="patientLocation-button1"  ion-button color="steelblue1"  fill="outline" block on-click="goToLastKnownWell()" block on-click="setCurrentPosition()"> 
-  CHOOSE YOUR LOCATION
+<ion-content  padding  style="height: 100vh;"id="page1">
+  <h3 id="lastKnownWell-heading5" style="color:#000000;font-weight:400;font-size: xx-large;">
+    Where is the patient located?
+  </h3>
+  <div style="height:5vh;"></div>
+  <button type ="button"  id="patientLocation-button1"  ion-button color="steelblue1"  fill="outline" block on-click="goToLastKnownWell()" block on-click="setCurrentPosition()"> 
+    CHOOSE YOUR LOCATION
   </button>
-  <div style="height:3%;"></div>
-<p style="text-align: center;font-size:large">OR</p>
-<div style="height:3%;"></div>
-  <ion-input type="text" [(ngModel)]="searchterm" (keyup)="search($event)" autocapitalize="on" class="input" placeholder="Search By City or Center" id="txtHome" required style = "border: solid black 3px;"></ion-input>
-  <div style="height:3%;"></div>
+  <div style="height:3vh;"></div>
+<p style="text-align: center;font-size: large">OR</p>
+<div style="height:3vh;"></div>
+  <ion-input type="text" [(ngModel)]="searchterm" (keyup)="search($event)" autocapitalize="on" class="input" style="font-size: large;" placeholder="Search By City or Center" id="txtHome" required style = "border: solid black 3px;"></ion-input>
+  <div style="height:5vh;"></div>
   <div *ngFor="let health_centres of Medical_Centers">
 <!--Tried the height to fix it probably does nothing and no screen size is that small-->
-    <button type ="button"   id="patientLocation-button1" text-wrap  ion-button color="steelblue1"  fill="outline"  block on-click="getLatLng(health_centres.name)" block on-click="goToLastKnownWell(health_centres.bTelestroke)" >
+    <button type ="button" padding  id="patientLocation-button1" text-wrap style="font-size: auto;" ion-button color="steelblue1"  fill="outline"  block on-click="getLatLng(health_centres.name)" block on-click="goToLastKnownWell(health_centres.bTelestroke)" >
       <!--{{health_centres.address}}-->
       <p>
         {{health_centres.name}}:  {{health_centres.city}}
@@ -36,7 +38,7 @@
   </div>
   <div *ngIf="Medical_Centers?.length < 1">
     <hr>
-    <p>
+    <p style="font-size: large;">
       No results
     </p>
   </div>
