--- a/src/pages/t-pa-question/t-pa-question.html
+++ b/src/pages/t-pa-question/t-pa-question.html
@@ -9,7 +9,7 @@
 
 <ion-content padding id="page3">
     
-  <h3 id="imagingRequired-heading3" style="color:#000000;font-weight:400;">
+  <h3 id="imagingRequired-heading3" style="color:#000000;font-weight:400;font-size: xx-large;">
     Has your patient had tPA?
   </h3>
   <div class="spacer" style="height:100px;" id="imagingRequired-spacer4"></div>
