--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -5,22 +5,22 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding class="card" id="page2">
+<ion-content padding class="card" style="height: 100vh;" id="page2">
  <!-- <ion-grid style="height :100%">
 <ion-row justify-content-center align-items-center style="height: 100%"> remove to center the text all in the middle-->
-<div style="height:10%;"></div>
+<div style="height:10vh;"></div>
   <h3 id="lastKnownWell-heading5" style="color:#000000;font-weight:400;font-size: xx-large;">
     What time was patient last known to be well?
   </h3>
-  <div style="height:10%;"></div>
+  <div style="height:13vh;"></div>
   <form [formGroup]="timeForm" (ngSubmit)="SubmitTime()"><!--The last known well in hour format-->
     <ion-item id="lastKnownWellTime">
       <ion-label>Time in EST</ion-label>
       <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm" required formControlName="time1"></ion-datetime>
     </ion-item>
-    <div class="spacer" style="height:100px;" id="lastKnownWell-spacer7"></div>
+    <div class="spacer" style="height:3vh;" id="lastKnownWell-spacer7"></div>
     <!--Break between inputs and the button to make it consistent-->
-    <div class="spacer" style="height:10%;" id="lastKnownWell-spacer7"></div>
+    <div class="spacer" style="height:10vh;" id="lastKnownWell-spacer7"></div>
     <br>
     <button  id="lastKnownWell-button2" ion-button color="steelblue1" [disabled]="!timeForm.valid" type="submit" block >
       Next
