openweathermap now works

--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -43,7 +43,7 @@
     </p>
   </div>
 
-  <div class="weather" *ngIf="weather">
+  <!--<div class="weather" *ngIf="weather">
     <div>   
        
         <p class="big">{{weather.current.temp_c}}°</p>
@@ -54,7 +54,7 @@
         <p>{{weather.location.name}}, <span>{{weather.location.country}}</span> </p>
         <p>{{weather.location.localtime}}</p>
     </div>  
-</div>
+</div>-->
  
   
 </ion-content>
