editing weather functionality

--- a/src/pages/imaging/imaging.html
+++ b/src/pages/imaging/imaging.html
@@ -7,8 +7,12 @@
   <components-timer></components-timer>
 </ion-header>
 
+<script src="imaging.ts"></script>
+
 <ion-content padding id="page4">
-  <div style="height:3vh;"></div>
+  <h4 style="background-color:powderblue;">
+  <p id="weather">Weather in {{this.Data.city}}: {{this.Data.origin_tempreal}} <img src= {{this.Data.origin_icon}}></p>
+  </h4>
   <h4 id="treatment-heading6" style="color:#000000;font-size: x-large;">
     Imaging
   </h4>
