made weather images local

--- a/src/pages/imaging/imaging.html
+++ b/src/pages/imaging/imaging.html
@@ -10,8 +10,8 @@
 <script src="imaging.ts"></script>
 
 <ion-content padding id="page4">
-  <h4 style="background-color:powderblue;">
-  <p id="weather">Weather in {{this.Data.city}}: {{this.Data.origin_tempreal |number:'.0'}} \u00B0 C<img src= {{this.Data.origin_icon}}></p>
+  <h4 style="background-color:powderblue;font-size: small;">
+ Weather in {{this.Data.city}}: {{this.Data.origin_tempreal |number:'.0'}} \u00B0C<img src= {{this.Data.origin_icon}}>
   </h4>
   <h4 id="treatment-heading6" style="color:#000000;font-size: x-large;">
     Imaging
