--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -80,8 +80,8 @@
   
     </div>
 
-    <div #Map class="map" style="height: 75vh" (mapClick)="onMapClick($event)"></div>
-<div style="height: 5vh;">
+    <div #Map class="map" style="height: 65vh" (mapClick)="onMapClick($event)"></div>
+<div class="contact">
   <button id="contact" ion-button color="steelblue1" block on-click="GoToContact()">Contact Information</button>
 </div>
   
