map displays again

--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -81,8 +81,8 @@
     </div>
 
     <div #Map class="map" style="height: 65vh" (mapClick)="onMapClick($event)"></div>
-<div class="contact">
-  <button id="contact" ion-button color="steelblue1" block on-click="GoToContact()">Contact Information</button>
+<div style="height: 5vh;">
+  <button class="contact" ion-button color="steelblue1" block on-click="GoToContact()">Contact Information</button>
 </div>
   
     <!--<div id="Legend">
