times shown on cards are multiplier affected values

--- a/src/pages/imaging/imaging.html
+++ b/src/pages/imaging/imaging.html
@@ -29,7 +29,7 @@
         {{card.name}} <h1> <img src= "./assets/imgs/ambulance.png" style="float:right"></h1>
         </ion-card-title>
         <p id="cardinfo">
-          Distance: {{card.DistChar}} &nbsp;&nbsp;&nbsp;&nbsp; Time: {{card.Timechar}} 
+          Distance: {{card.DistChar}} &nbsp;&nbsp;&nbsp;&nbsp; Time: {{card.TimeWithMultChar}} 
       </ion-card-content>
     </ion-card>
   </ion-item>
