fixed issue where app would crash if no destination was clicked as well as the way some html was worded

--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -10,7 +10,7 @@
 <ion-row justify-content-center align-items-center style="height: 100%"> remove to center the text all in the middle-->
 <div style="height:10vh;"></div>
   <h3 id="lastKnownWell-heading5" style="color:#000000;font-weight:400;font-size: xx-large;">
-    What time was patient last known to be well?
+    What time was the patient last known to be well?
   </h3>
   <div style="height:13vh;"></div>
   <form [formGroup]="timeForm" (ngSubmit)="SubmitTime()"><!--The last known well in hour format-->
