patient location and last known well pages could be scrolled even though they had no reason to scroll, that is fixed

--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -13,7 +13,7 @@
   <components-timer></components-timer>
 
 </ion-header>
-<ion-content  padding  style="height: 100vh;"id="page1">
+<ion-content no-bounce padding  style="height: 100vh;"id="page1">
   <h3 id="lastKnownWell-heading5" style="color:#000000;font-weight:400;font-size: xx-large;">
     Where is the patient located?
   </h3>
