--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -5,7 +5,7 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding class="card" style="height: 100vh;" id="page2">
+<ion-content no-bounce padding class="card" style="height: 100vh;" id="page2">
  <!-- <ion-grid style="height :100%">
 <ion-row justify-content-center align-items-center style="height: 100%"> remove to center the text all in the middle-->
 <div style="height:10vh;"></div>
